--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,6 +10,6 @@ body {
     display: grid;
     font-family: 'Courier New', Courier, monospace;
     column-gap: 2;
-    backface-visibility: hidden;
+    backface-visibility: visible;
     padding: 0;
 }
