--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,41 @@
-/*
-COLORS
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
 
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
 body {
-  color: green;
-  font-size: 16;
-  background-color: green;
-  height: 100px;
-  display: flex;
-  background-clip: polygon();
-  background-image: linear-gradient(to right, #fff, #888);
-  display: grid;
-  font-family: 'Courier New', Courier, monospace;
-  column-gap: 2;
-  backface-visibility: visible;
-  padding: 0; }
+  font-family: 'Open Sans', sans-serif;
+  height: 100vh;
+  color: #777;
+  background-image: linear-gradient(to right bottom, #FF3366, #BA265D);
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: #f4f2f2;
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
+  min-height: 50rem; }
+
+.header {
+  height: 7rem;
+  background-color: #fff;
+  border-bottom: 1px solid #f4f2f2; }
+
+.content {
+  display: flex; }
+
+.sidebar {
+  background-color: #333;
+  flex: 0 0 18%; }
+
+.hotel-view {
+  flex: 1;
+  background-color: orangered; }
