--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,20 +1,17 @@
-/*
-COLORS
 
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
+$primary: #eb2f64;
+$primary-light: #FF3366;
+$primary-dark: #BA265D;
 
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
+$grey-light-1: #faf9f9;
+$grey-light-2: #f4f2f2;
+$grey-light-3: #f0eeee;
+$grey-light-4: #ccc;
 
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
+$grey-dark-1: #333;
+$grey-dark-2: #777;
+$grey-dark-3: #999;
 
-*/
 
 @import 'base';
 @import 'component';
