--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -14,6 +14,7 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   height: 100vh;
+  font-weight: 400;
   color: #777;
   background-image: -webkit-gradient(linear, left top, right bottom, from(#FF3366), to(#BA265D));
   background-image: -webkit-linear-gradient(left top, #FF3366, #BA265D);
@@ -21,6 +22,65 @@ body {
   background-image: linear-gradient(to right bottom, #FF3366, #BA265D);
   background-size: cover;
   background-repeat: no-repeat; }
+
+.logo {
+  height: 4rem;
+  margin-left: 2rem; }
+
+.search {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 40%;
+  flex: 0 0 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  .search__input {
+    font-family: inherit;
+    color: inherit;
+    background-color: #f4f2f2;
+    border: none;
+    outline: none;
+    padding: 0.8rem 2rem;
+    border-radius: 50px;
+    width: 95%;
+    margin-right: -3.5rem;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s; }
+    .search__input:focus {
+      width: 100%;
+      background-color: #f0eeee; }
+    .search__input::-webkit-input-placeholder {
+      font-weight: 100;
+      color: #999; }
+  .search__input:focus + .search__button {
+    background-color: #f0eeee; }
+  .search__button {
+    outline: none;
+    border: none;
+    background-color: #f4f2f2;
+    font-size: 2rem;
+    -webkit-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+    color: #777; }
+    .search__button:focus {
+      -webkit-transform: translateY(2px);
+      -ms-transform: translateY(2px);
+      transform: translateY(2px); }
+
+.user-nav {
+  background-color: greenyellow; }
+  .user-nav__user-photo {
+    height: 4rem;
+    width: auto;
+    border-radius: 50%; }
 
 .container {
   max-width: 120rem;
@@ -31,9 +91,19 @@ body {
   min-height: 50rem; }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid #f4f2f2; }
+  border-bottom: 1px solid #f4f2f2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .content {
   display: -webkit-box;
