--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,7 @@ html {
 body {
     font-family: 'Open Sans', sans-serif;
     height: 100vh;
+    font-weight: 400;
     color: $grey-dark-2;
     background-image: linear-gradient(to right bottom, $primary-light, $primary-dark);
     background-size: cover;
