--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,43 @@ body {
       padding: 1rem;
       font-weight: 600; }
 
+.side-nav {
+  font-size: 1.4rem;
+  margin: 3.5rem 0; }
+  .side-nav__item {
+    list-style: none;
+    position: relative; }
+  .side-nav__item::before {
+    content: "";
+    background-color: #eb2f64;
+    height: 100%;
+    width: .3rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scaleY(0);
+    transition: transform .5s, width .1s ease-in .5s; }
+  .side-nav__item:hover::before, .side-nav__item-active::before {
+    transform: scaleY(1);
+    width: 100%; }
+  .side-nav__item:active::before {
+    background-color: #FF3366; }
+  .side-nav__link:link, .side-nav__link:visited {
+    text-decoration: none;
+    color: #fff;
+    padding: 1.4rem 3rem;
+    display: block;
+    position: relative;
+    z-index: 9; }
+  .side-nav__link-icon i {
+    margin-right: 2rem; }
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: #ccc; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -121,8 +158,12 @@ body {
 
 .sidebar {
   background-color: #333;
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   flex: 1;
-  background-color: orangered; }
+  background-color: orangered;
+  height: 55rem; }
