--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -140,6 +140,51 @@ body {
       padding: 1rem;
       font-weight: 600; }
 
+.side-nav {
+  font-size: 1.4rem;
+  margin: 3.5rem 0; }
+  .side-nav__item {
+    list-style: none;
+    position: relative; }
+  .side-nav__item::before {
+    content: "";
+    background-color: #eb2f64;
+    height: 100%;
+    width: .3rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transition: width .1s ease-in .5s, -webkit-transform .5s;
+    transition: width .1s ease-in .5s, -webkit-transform .5s;
+    -o-transition: transform .5s, width .1s ease-in .5s;
+    transition: transform .5s, width .1s ease-in .5s;
+    transition: transform .5s, width .1s ease-in .5s, -webkit-transform .5s; }
+  .side-nav__item:hover::before, .side-nav__item-active::before {
+    -webkit-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    transform: scaleY(1);
+    width: 100%; }
+  .side-nav__item:active::before {
+    background-color: #FF3366; }
+  .side-nav__link:link, .side-nav__link:visited {
+    text-decoration: none;
+    color: #fff;
+    padding: 1.4rem 3rem;
+    display: block;
+    position: relative;
+    z-index: 9; }
+  .side-nav__link-icon i {
+    margin-right: 2rem; }
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: #ccc; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -172,10 +217,21 @@ body {
   background-color: #333;
   -webkit-box-flex: 0;
   -ms-flex: 0 0 18%;
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
 
 .hotel-view {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-color: orangered; }
+  background-color: orangered;
+  height: 55rem; }
