--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -114,13 +114,64 @@
             font-weight: 600;
         }
     }
-
-
-
-
-
-
-
-
-
 }
+
+// SIDE NAVIGATION
+.side-nav {
+    font-size: 1.4rem;
+    margin: 3.5rem 0;
+
+    &__item {
+        list-style: none;
+        position: relative;
+        &:not(:last-child){
+           // margin-bottom: .1rem;
+        }
+    }
+
+    &__item::before {
+        content: "";
+        background-color: $primary;
+        height: 100%;
+        width: .3rem;
+        position: absolute;
+        top:0;
+        left: 0;
+        transform: scaleY(0);
+        transition: transform .5s, width .1s ease-in .5s;
+    }
+
+    &__item:hover::before,
+    &__item-active::before {
+        transform: scaleY(1);
+        width: 100%;
+    }
+
+    &__item:active::before {
+        background-color: $primary-light;
+    }
+
+    &__link:link,
+    &__link:visited {
+        text-decoration: none;
+        color: #fff;  
+        padding: 1.4rem 3rem;
+        display: block;
+        position: relative;
+        z-index: 9;
+    }
+
+   
+    &__link-icon i {
+        margin-right: 2rem;
+    }
+}
+
+.legal {
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 2.5rem;
+    color: $grey-light-4;    
+}
+
+
