--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -25,9 +25,17 @@
 .sidebar {
     background-color: $grey-dark-1;
     flex: 0 0 18%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view {
     flex: 1;
     background-color: orangered;
+    height: 55rem;
 }
+
+
+
