--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,76 @@ body {
   padding: 2.5rem;
   color: #ccc; }
 
+.gallery {
+  display: flex;
+  overflow: hidden; }
+  .gallery__photo {
+    display: block;
+    width: 100%;
+    transform: scale(1.05);
+    transition: transform 0.3s;
+    backface-visibility: hidden; }
+    .gallery__photo:hover {
+      transform: scale(1); }
+
+.overview {
+  background-color: #fff;
+  border-bottom: 1px solid #f4f2f2;
+  display: flex;
+  align-items: center; }
+  .overview > *:not(:last-child) {
+    padding-right: 2rem; }
+  .overview__heading {
+    text-transform: uppercase;
+    padding-left: 2rem;
+    font-weight: 200; }
+  .overview__icon {
+    flex: 1;
+    font-size: 1.4rem;
+    color: #eb2f64;
+    padding: 1rem 2rem; }
+  .overview__location {
+    font-size: 1.4rem;
+    color: #eb2f64;
+    backface-visibility: hidden; }
+    .overview__location .btn-inline {
+      text-decoration: none;
+      border-bottom: 1px solid #eb2f64;
+      padding-bottom: 0.3rem;
+      color: #eb2f64;
+      background-color: transparent;
+      margin-left: 0.3rem; }
+      .overview__location .btn-inline:hover {
+        border-bottom: 1px solid #777;
+        color: #777; }
+      .overview__location .btn-inline:focus {
+        animation: pulse 1s infinite;
+        outline: none; }
+  .overview__rating {
+    background-color: #eb2f64;
+    color: #faf9f9;
+    text-align: center;
+    align-self: stretch;
+    padding: 1rem 1rem;
+    text-transform: uppercase; }
+    .overview__rating-average {
+      font-size: 2rem;
+      font-weight: 100; }
+    .overview__rating-count {
+      font-size: 1rem;
+      font-weight: 100; }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -165,5 +235,4 @@ body {
 
 .hotel-view {
   flex: 1;
-  background-color: orangered;
   height: 55rem; }
