--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -345,5 +345,29 @@ body {
 .hotel-view {
   -webkit-box-flex: 1;
   -ms-flex: 1;
+  flex: 1; }
+
+.detail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 4.5rem;
+  background-color: #faf9f9;
+  border-bottom: 1px solid #f4f2f2; }
+
+.description {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 60%;
+  flex: 0 0 60%;
+  background-color: #fff;
+  margin-right: 4.5rem;
+  -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+
+.user-review {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
-  height: 55rem; }
+  background-color: #fff;
+  -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
