--- a/css/main.css
+++ b/css/main.css
@@ -234,5 +234,21 @@ body {
   justify-content: space-between; }
 
 .hotel-view {
+  flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: #faf9f9;
+  border-bottom: 1px solid #f4f2f2; }
+
+.description {
+  flex: 0 0 60%;
+  background-color: #fff;
+  margin-right: 4.5rem;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+
+.user-review {
   flex: 1;
-  height: 55rem; }
+  background-color: #fff;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
