--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -41,6 +41,7 @@
     padding: 4.5rem;
     background-color: $grey-light-1;
     border-bottom: 1px solid $grey-light-2;
+    font-size: 1.4rem;
 }
 
 .description {
@@ -48,6 +49,7 @@
     background-color: #fff;
     margin-right: 4.5rem;
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+    padding: 2rem;
 }
 
 .user-review {
