--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -287,3 +287,64 @@
         box-shadow: none;
     }
 }
+
+
+////////////////////
+// PARAGRAPH
+
+.paragraph:not(:last-of-type){
+    margin-bottom: 2rem;
+}
+
+///////////////
+// LİST
+
+.list {
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: 1px solid $grey-light-2;
+    border-bottom: 1px solid $grey-light-2;
+
+    display: flex;
+    flex-wrap: wrap;
+    &__item {
+        flex: 0 0 50%;
+        padding: 0.5rem 1rem;
+
+        & i {
+            color: $primary;
+        }
+    }
+}
+
+////////////////
+// RECOMMEND
+
+.recommend {
+    font-size: 1.3rem;
+    color: $grey-dark-3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__count {
+        flex: 0 0 60%;
+    }
+
+    &__friends {
+        flex: 1;
+    }
+
+    &__photo {
+        box-sizing: content-box;
+        &:not(:last-child) {
+            margin-right: -1.3rem;
+        }
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: 3px solid #fff;
+    }
+
+}
