--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,7 +13,7 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    height: 100vh;
+    height: 100%;
     font-weight: 400;
     color: $grey-dark-2;
     background-image: linear-gradient(to right bottom, $primary-light, $primary-dark);
