--- a/css/main.css
+++ b/css/main.css
@@ -288,6 +288,26 @@ body {
   .review__user-button {
     text-align: center; }
 
+.cta {
+  padding: 3.5rem 0;
+  text-align: center; }
+  .cta__book-now {
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+    font-weight: 300;
+    font-size: 1.6rem; }
+
+.btn {
+  background-image: linear-gradient(to right, #FF3366, #BA265D);
+  padding: 2rem 3.5rem;
+  border-radius: 100px;
+  color: #fff;
+  font-weight: 400;
+  outline: none;
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.3);
+  border: none;
+  font-size: 1.4rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
