--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -402,6 +402,30 @@ body {
   .review__user-button {
     text-align: center; }
 
+.cta {
+  padding: 3.5rem 0;
+  text-align: center; }
+  .cta__book-now {
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+    font-weight: 300;
+    font-size: 1.6rem; }
+
+.btn {
+  background-image: -webkit-gradient(linear, left top, right top, from(#FF3366), to(#BA265D));
+  background-image: -webkit-linear-gradient(left, #FF3366, #BA265D);
+  background-image: -o-linear-gradient(left, #FF3366, #BA265D);
+  background-image: linear-gradient(to right, #FF3366, #BA265D);
+  padding: 2rem 3.5rem;
+  border-radius: 100px;
+  color: #fff;
+  font-weight: 400;
+  outline: none;
+  -webkit-box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.3);
+  border: none;
+  font-size: 1.4rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
