--- a/css/main.css
+++ b/css/main.css
@@ -299,14 +299,45 @@ body {
 
 .btn {
   background-image: linear-gradient(to right, #FF3366, #BA265D);
-  padding: 2rem 3.5rem;
   border-radius: 100px;
   color: #fff;
-  font-weight: 400;
+  font-weight: 100;
   outline: none;
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.3);
   border: none;
-  font-size: 1.4rem; }
+  font-size: 1.8rem;
+  position: relative;
+  overflow: hidden;
+  backface-visibility: hidden; }
+  .btn > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all .3s; }
+  .btn__visible {
+    padding: 2rem 6.5rem; }
+  .btn__invisible {
+    padding: 2rem 0;
+    position: absolute;
+    left: 0;
+    top: -100%; }
+  .btn:hover {
+    background-image: linear-gradient(to left, #FF3366, #BA265D); }
+  .btn:hover .btn__visible {
+    transform: translateY(100%); }
+  .btn:hover .btn__invisible {
+    top: 0; }
+  .btn:focus {
+    outline: none;
+    animation: btnPulse 1s infinite; }
+
+@keyframes btnPulse {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(1.05); }
+  100% {
+    transform: scale(1); } }
 
 .container {
   max-width: 120rem;
