--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -434,20 +434,83 @@
 
 .btn {
     background-image: linear-gradient(to right, $primary-light, $primary-dark);
-    padding: 2rem 3.5rem;
     border-radius: 100px;
     color: #fff;
-    font-weight: 400;
+    font-weight: 100;
     outline: none;
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.3);
     border: none;
-    font-size: 1.4rem;
-    
-    &__visible {
+    font-size: 1.8rem;
+    position: relative;
+    overflow: hidden;
+    backface-visibility: hidden;
 
+
+    & > * {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .3s;
+
+    }
+
+    &__visible {
+        padding: 2rem 6.5rem;
     }
 
     &__invisible {
-        
+        padding: 2rem 0;
+        position:absolute;
+        left: 0;
+        top: -100%;
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, $primary-light, $primary-dark);
+    }
+
+    &:hover &__visible {
+        transform: translateY(100%);
+    }
+    
+    &:hover &__invisible {
+        top: 0;
+    }
+
+    &:focus {
+        outline: none;
+        animation: btnPulse 1s infinite;
+    }
+
+    @keyframes btnPulse {
+        0% {
+            transform: scale(1);
+        }
+
+        50% {
+            transform: scale(1.05);
+        }
+
+        100% {
+            transform: scale(1);
+        }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
