--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 1100px) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -103,10 +106,17 @@ body {
 .side-nav {
   font-size: 1.4rem;
   margin: 3.5rem 0; }
+  @media only screen and (max-width: 900px) {
+    .side-nav {
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     list-style: none;
     position: relative;
     text-transform: uppercase; }
+    @media only screen and (max-width: 900px) {
+      .side-nav__item:not(:last-child) {
+        flex: 1; } }
   .side-nav__item::before {
     content: "";
     background-color: #eb2f64;
@@ -129,6 +139,10 @@ body {
     display: block;
     position: relative;
     z-index: 9; }
+    @media only screen and (max-width: 900px) {
+      .side-nav__link:link, .side-nav__link:visited {
+        text-align: center;
+        padding: 2rem; } }
   .side-nav__link-icon i {
     margin-right: 2rem; }
 
@@ -137,6 +151,9 @@ body {
   text-align: center;
   padding: 2.5rem;
   color: #ccc; }
+  @media only screen and (max-width: 900px) {
+    .legal {
+      display: none; } }
 
 .gallery {
   display: flex;
@@ -235,7 +252,8 @@ body {
   .recommend__count {
     flex: 0 0 60%; }
   .recommend__friends {
-    flex: 1; }
+    flex: 1;
+    display: flex; }
   .recommend__photo {
     box-sizing: content-box;
     height: 4rem;
@@ -252,6 +270,10 @@ body {
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden; }
+  @media only screen and (max-width: 900px) {
+    .review {
+      padding: 2rem;
+      margin-bottom: 2.5rem; } }
   .review::before {
     content: "\201C";
     position: absolute;
@@ -291,6 +313,9 @@ body {
 .cta {
   padding: 3.5rem 0;
   text-align: center; }
+  @media only screen and (max-width: 900px) {
+    .cta {
+      padding: 2.5rem; } }
   .cta__book-now {
     text-transform: uppercase;
     margin-bottom: 2.5rem;
@@ -344,6 +369,11 @@ body {
   margin: 8rem auto;
   background-color: #f4f2f2;
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5); }
+  @media only screen and (max-width: 1200px) {
+    .container {
+      margin: 0;
+      max-width: 100%;
+      width: 100%; } }
 
 .header {
   font-size: 1.4rem;
@@ -356,6 +386,9 @@ body {
 
 .content {
   display: flex; }
+  @media only screen and (max-width: 900px) {
+    .content {
+      flex-direction: column; } }
 
 .sidebar {
   background-color: #333;
@@ -373,6 +406,9 @@ body {
   background-color: #faf9f9;
   border-bottom: 1px solid #f4f2f2;
   font-size: 1.4rem; }
+  @media only screen and (max-width: 900px) {
+    .detail {
+      padding: 3rem; } }
 
 .description {
   flex: 0 0 60%;
@@ -380,6 +416,10 @@ body {
   margin-right: 4.5rem;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
   padding: 2rem; }
+  @media only screen and (max-width: 900px) {
+    .description {
+      margin-right: 3rem;
+      padding: 1.5rem; } }
 
 .user-review {
   flex: 1; }
