--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -10,6 +10,9 @@ html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 1100px) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -143,10 +146,21 @@ body {
 .side-nav {
   font-size: 1.4rem;
   margin: 3.5rem 0; }
+  @media only screen and (max-width: 900px) {
+    .side-nav {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     list-style: none;
     position: relative;
     text-transform: uppercase; }
+    @media only screen and (max-width: 900px) {
+      .side-nav__item:not(:last-child) {
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1; } }
   .side-nav__item::before {
     content: "";
     background-color: #eb2f64;
@@ -177,6 +191,10 @@ body {
     display: block;
     position: relative;
     z-index: 9; }
+    @media only screen and (max-width: 900px) {
+      .side-nav__link:link, .side-nav__link:visited {
+        text-align: center;
+        padding: 2rem; } }
   .side-nav__link-icon i {
     margin-right: 2rem; }
 
@@ -185,6 +203,9 @@ body {
   text-align: center;
   padding: 2.5rem;
   color: #ccc; }
+  @media only screen and (max-width: 900px) {
+    .legal {
+      display: none; } }
 
 .gallery {
   display: -webkit-box;
@@ -341,7 +362,10 @@ body {
   .recommend__friends {
     -webkit-box-flex: 1;
     -ms-flex: 1;
-    flex: 1; }
+    flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
   .recommend__photo {
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
@@ -360,6 +384,10 @@ body {
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden; }
+  @media only screen and (max-width: 900px) {
+    .review {
+      padding: 2rem;
+      margin-bottom: 2.5rem; } }
   .review::before {
     content: "\201C";
     position: absolute;
@@ -405,6 +433,9 @@ body {
 .cta {
   padding: 3.5rem 0;
   text-align: center; }
+  @media only screen and (max-width: 900px) {
+    .cta {
+      padding: 2.5rem; } }
   .cta__book-now {
     text-transform: uppercase;
     margin-bottom: 2.5rem;
@@ -486,6 +517,11 @@ body {
   background-color: #f4f2f2;
   -webkit-box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5); }
+  @media only screen and (max-width: 1200px) {
+    .container {
+      margin: 0;
+      max-width: 100%;
+      width: 100%; } }
 
 .header {
   font-size: 1.4rem;
@@ -506,6 +542,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  @media only screen and (max-width: 900px) {
+    .content {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
 .sidebar {
   background-color: #333;
@@ -536,6 +578,9 @@ body {
   background-color: #faf9f9;
   border-bottom: 1px solid #f4f2f2;
   font-size: 1.4rem; }
+  @media only screen and (max-width: 900px) {
+    .detail {
+      padding: 3rem; } }
 
 .description {
   -webkit-box-flex: 0;
@@ -546,6 +591,10 @@ body {
   -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
   padding: 2rem; }
+  @media only screen and (max-width: 900px) {
+    .description {
+      margin-right: 3rem;
+      padding: 1.5rem; } }
 
 .user-review {
   -webkit-box-flex: 1;
