--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,6 +4,12 @@
     background-color: $grey-light-2;
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
 
+    @media only screen and (max-width:1200px){
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
+
 }
 
 .header{
@@ -18,6 +24,11 @@
 
 .content{
     display: flex;
+    
+    @media only screen and (max-width: 900px){
+       flex-direction:column;
+    }
+
 
 }
 
@@ -41,6 +52,10 @@
     background-color: $grey-light-1;
     border-bottom: 1px solid $grey-light-2;
     font-size: 1.4rem;
+
+    @media only screen and (max-width:900px){
+        padding: 3rem;
+    }
 }
 
 .description {
@@ -49,6 +64,11 @@
     margin-right: 4.5rem;
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
     padding: 2rem;
+
+    @media only screen and (max-width:900px){
+    margin-right: 3rem;
+    padding: 1.5rem;
+    }
 }
 
 .user-review {
