--- a/css/main.css
+++ b/css/main.css
@@ -239,7 +239,11 @@ body {
   flex-wrap: wrap; }
   .list__item {
     flex: 0 0 50%;
-    padding: 0.5rem 1rem; }
+    padding: 0.5rem 1rem;
+    display: flex; }
+    @media only screen and (max-width: 600px) {
+      .list__item {
+        flex: 0 0 100%; } }
     .list__item i {
       color: #eb2f64; }
 
@@ -409,6 +413,9 @@ body {
   @media only screen and (max-width: 900px) {
     .detail {
       padding: 3rem; } }
+  @media only screen and (max-width: 600px) {
+    .detail {
+      flex-direction: column; } }
 
 .description {
   flex: 0 0 60%;
@@ -420,6 +427,11 @@ body {
     .description {
       margin-right: 3rem;
       padding: 1.5rem; } }
+  @media only screen and (max-width: 900px) {
+    .description {
+      padding: 3rem;
+      margin: 0;
+      margin-bottom: 2rem; } }
 
 .user-review {
   flex: 1; }
