--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -339,7 +339,15 @@ body {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
-    padding: 0.5rem 1rem; }
+    padding: 0.5rem 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    @media only screen and (max-width: 600px) {
+      .list__item {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%; } }
     .list__item i {
       color: #eb2f64; }
 
@@ -581,6 +589,12 @@ body {
   @media only screen and (max-width: 900px) {
     .detail {
       padding: 3rem; } }
+  @media only screen and (max-width: 600px) {
+    .detail {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
 .description {
   -webkit-box-flex: 0;
@@ -595,6 +609,11 @@ body {
     .description {
       margin-right: 3rem;
       padding: 1.5rem; } }
+  @media only screen and (max-width: 900px) {
+    .description {
+      padding: 3rem;
+      margin: 0;
+      margin-bottom: 2rem; } }
 
 .user-review {
   -webkit-box-flex: 1;
