--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -328,12 +328,19 @@
 
     display: flex;
     flex-wrap: wrap;
+
     &__item {
         flex: 0 0 50%;
         padding: 0.5rem 1rem;
+        display: flex;
+
+        @media only screen and (max-width:600px){
+            flex: 0 0 100%;
+        }
 
         & i {
             color: $primary;
+            
         }
     }
 }
