--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center; }
+  @media only screen and (max-width: 480px) {
+    .search {
+      order: 1;
+      flex: 0 0 100%; } }
   .search__input {
     font-family: inherit;
     color: inherit;
@@ -138,13 +142,22 @@ body {
     padding: 1.4rem 3rem;
     display: block;
     position: relative;
-    z-index: 9; }
+    z-index: 9;
+    display: flex;
+    align-items: center; }
     @media only screen and (max-width: 900px) {
       .side-nav__link:link, .side-nav__link:visited {
         text-align: center;
         padding: 2rem; } }
+    @media only screen and (max-width: 600px) {
+      .side-nav__link:link, .side-nav__link:visited {
+        flex-direction: column;
+        padding: 2rem; } }
   .side-nav__link-icon i {
     margin-right: 2rem; }
+    @media only screen and (max-width: 600px) {
+      .side-nav__link-icon i {
+        margin-right: 0; } }
 
 .legal {
   font-size: 1.2rem;
@@ -178,11 +191,17 @@ body {
     text-transform: uppercase;
     padding-left: 2rem;
     font-weight: 200; }
+    @media only screen and (max-width: 600px) {
+      .overview__heading {
+        padding: 1.5rem; } }
   .overview__icon {
     flex: 1;
     font-size: 1.4rem;
     color: #eb2f64;
     padding: 1rem 2rem; }
+    @media only screen and (max-width: 600px) {
+      .overview__icon {
+        padding: 0.8rem 1.5rem; } }
   .overview__location {
     font-size: 1.4rem;
     color: #eb2f64;
@@ -387,6 +406,11 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 480px) {
+    .header {
+      flex-wrap: wrap;
+      align-content: space-around;
+      height: 12rem; } }
 
 .content {
   display: flex; }
