--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -43,6 +43,14 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
+  @media only screen and (max-width: 480px) {
+    .search {
+      -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+      order: 1;
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+      flex: 0 0 100%; } }
   .search__input {
     font-family: inherit;
     color: inherit;
@@ -190,13 +198,29 @@ body {
     padding: 1.4rem 3rem;
     display: block;
     position: relative;
-    z-index: 9; }
+    z-index: 9;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
     @media only screen and (max-width: 900px) {
       .side-nav__link:link, .side-nav__link:visited {
         text-align: center;
         padding: 2rem; } }
+    @media only screen and (max-width: 600px) {
+      .side-nav__link:link, .side-nav__link:visited {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        padding: 2rem; } }
   .side-nav__link-icon i {
     margin-right: 2rem; }
+    @media only screen and (max-width: 600px) {
+      .side-nav__link-icon i {
+        margin-right: 0; } }
 
 .legal {
   font-size: 1.2rem;
@@ -245,6 +269,9 @@ body {
     text-transform: uppercase;
     padding-left: 2rem;
     font-weight: 200; }
+    @media only screen and (max-width: 600px) {
+      .overview__heading {
+        padding: 1.5rem; } }
   .overview__icon {
     -webkit-box-flex: 1;
     -ms-flex: 1;
@@ -252,6 +279,9 @@ body {
     font-size: 1.4rem;
     color: #eb2f64;
     padding: 1rem 2rem; }
+    @media only screen and (max-width: 600px) {
+      .overview__icon {
+        padding: 0.8rem 1.5rem; } }
   .overview__location {
     font-size: 1.4rem;
     color: #eb2f64;
@@ -545,6 +575,13 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media only screen and (max-width: 480px) {
+    .header {
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -ms-flex-line-pack: distribute;
+      align-content: space-around;
+      height: 12rem; } }
 
 .content {
   display: -webkit-box;
