--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -263,6 +263,10 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media only screen and (max-width: 480px) {
+    .overview {
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; } }
   .overview > *:not(:last-child) {
     padding-right: 2rem; }
   .overview__heading {
@@ -282,6 +286,16 @@ body {
     @media only screen and (max-width: 600px) {
       .overview__icon {
         padding: 0.8rem 1.5rem; } }
+    @media only screen and (max-width: 480px) {
+      .overview__icon {
+        -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+        order: 1;
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+        flex: 0 0 auto;
+        padding: 0.5rem 1rem;
+        font-size: 2rem; } }
   .overview__location {
     font-size: 1.4rem;
     color: #eb2f64;
