--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -238,6 +238,9 @@
     display: flex;
     align-items: center;
 
+    @media only screen and (max-width:480px){
+        flex-wrap: wrap;
+    }
     & > *:not(:last-child) {
         padding-right: 2rem;
     }
@@ -264,9 +267,16 @@
         font-size: 1.4rem;
         color: $primary;
         padding: 1rem 2rem;
+       
         @media only screen and (max-width:600px){
             padding: 0.8rem 1.5rem;
         }
+        @media only screen and (max-width:480px){
+            order:1;
+            flex: 0 0 auto;
+            padding: 0.5rem 1rem;
+            font-size: 2rem;
+       }
     }
 
     &__location {
