--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@ body {
   @media only screen and (max-width: 480px) {
     .search {
       order: 1;
-      flex: 0 0 100%; } }
+      flex: 0 0 100%;
+      justify-content: space-around; } }
   .search__input {
     font-family: inherit;
     color: inherit;
@@ -62,6 +63,9 @@ body {
     color: #777; }
     .search__button:focus {
       transform: translateY(2px); }
+    @media only screen and (max-width: 600px) {
+      .search__button i {
+        margin-left: -2rem; } }
 
 .user-nav {
   align-self: stretch;
@@ -220,14 +224,23 @@ body {
     color: #faf9f9;
     text-align: center;
     align-self: stretch;
-    padding: 1rem 1rem;
+    padding: 1rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 480px) {
+      .overview__rating {
+        padding: 0.5rem; } }
     .overview__rating-average {
       font-size: 2rem;
       font-weight: 100; }
+      @media only screen and (max-width: 480px) {
+        .overview__rating-average {
+          font-size: 1.5rem; } }
     .overview__rating-count {
       font-size: 1rem;
       font-weight: 100; }
+      @media only screen and (max-width: 480px) {
+        .overview__rating-count {
+          font-size: 0.5rem; } }
 
 .btn-inline {
   text-decoration: none;
