--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -14,6 +14,7 @@
     @media only screen and (max-width:480px){
         order:1;
         flex: 0 0 100%;
+        justify-content: space-around;
     }
     &__input {
         font-family: inherit;
@@ -53,6 +54,13 @@
             transform: translateY(2px);
 
         }
+
+        @media only screen and (max-width:600px) {
+            & i {
+                margin-left: -2rem;
+            }
+        }
+       
     }
 
 
@@ -294,17 +302,28 @@
         color:$grey-light-1;
         text-align: center;
         align-self: stretch;
-        padding: 1rem 1rem;
+        padding: 1rem;
         text-transform: uppercase;
+
+        @media only screen and (max-width:480px){
+            padding: 0.5rem;
+        }
 
         &-average{
             font-size: 2rem;
             font-weight: 100;
+            @media only screen and (max-width:480px){
+                font-size: 1.5rem
+           }
+
         }
 
         &-count {
             font-size: 1rem;
             font-weight: 100;
+            @media only screen and (max-width:480px){
+                font-size: 0.5rem
+           }
         }
     }
 }
